update url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ keywords:         Programming
 language:         ja # default language of the blog. Language codes: http://www.w3schools.com/tags/ref_language_codes.asp
 
 baseurl:          "/blog" # the subpath of your site, e.g. /blog
-url:              "https://tex2e.github.io/blog" # the base hostname & protocol for your site. Have a look at robots.txt as well!
+url:              "https://tex2e.github.io" # the base hostname & protocol for your site. Have a look at robots.txt as well!
 permalink:        /:categories/:title
 cover:            /assets/cover0.jpg
 disqus_shortname: "tex2e"
