--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:            "晴耕雨読"
-subtitle:         "work in the field in fine weather and stay at home reading when it is wet"
-description:      "趣味でプログラミングをしている Mako(tex2e) によるブログです。"
-keywords:         Programming
-language:         ja # default language of the blog. Language codes: http://www.w3schools.com/tags/ref_language_codes.asp
+title: "晴耕雨読"
+subtitle: "working in the fields on fine days and reading books on rainy days"
+description: "趣味でプログラミングをしている Mako(tex2e) によるブログです。"
+keywords: Programming
+language: ja # default language of the blog. Language codes: http://www.w3schools.com/tags/ref_language_codes.asp
 
-baseurl:          "/blog" # the subpath of your site, e.g. /blog
-url:              "https://tex2e.github.io" # the base hostname & protocol for your site. Have a look at robots.txt as well!
-permalink:        /:categories/:title
-cover:            /assets/cover0.jpg
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url:     "https://tex2e.github.io" # the base hostname & protocol for your site. Have a look at robots.txt as well!
+permalink: /:categories/:title
+cover:     /assets/cover0.jpg
 disqus_shortname: "tex2e"
 
 # Build settings
