update ignore path pattern

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -7,7 +7,7 @@
       "pattern": "^./"
     },
     {
-      "pattern": "^http://localhost"
+      "pattern": "^https?://localhost"
     },
     {
       "pattern": "^http://hostname"
