update mlc_config: url pattern

--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -4,7 +4,10 @@
       "pattern": "^/blog/"
     },
     {
-      "pattern": "^./"
+      "pattern": "^\\./"
+    },
+    {
+      "pattern": "^\\.\\./"
     },
     {
       "pattern": "^https?://localhost"
