--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -14,6 +14,9 @@
     },
     {
       "pattern": "^http://hostname"
+    },
+    {
+      "pattern": "^https://docs.raku.org"
     }
   ],
   "aliveStatusCodes": [
