--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -17,6 +17,9 @@
     },
     {
       "pattern": "^https://docs.raku.org"
+    },
+    {
+      "pattern": "^hxxps?://"
     }
   ],
   "aliveStatusCodes": [
