--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,3 +11,4 @@ jobs:
       with:
         use-quiet-mode: 'yes'
         config-file: '.github/workflows/mlc_config.json'
+        folder-path: '_posts, _pages'
