--- a/.github/workflows/mlc_config.json
+++ b/.github/workflows/mlc_config.json
@@ -20,6 +20,9 @@
     },
     {
       "pattern": "\\.pdf$"
+    },
+    {
+      "pattern": "^https://amzn.to"
     }
   ],
   "replacementPatterns": [
